--- a/ExamenP1/app/src/main/res/layout/activity_main.xml
+++ b/ExamenP1/app/src/main/res/layout/activity_main.xml
@@ -21,14 +21,14 @@
 
     <Button
         android:id="@+id/xbtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="171dp"
+        android:layout_height="44dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="311dp"
-        android:layout_marginTop="11dp"
-        android:text="Borrar"
-        android:onClick="borrarTodo"/>
+        android:layout_marginStart="241dp"
+        android:layout_marginTop="22dp"
+        android:onClick="borrarTodo"
+        android:text="Nuevo intento" />
 
 
 </RelativeLayout>
